Changed the videos to our real videos

--- a/index.html
+++ b/index.html
@@ -166,6 +166,21 @@
 
   <div class="columns is-centered has-text-centered">
     <div class="column is-full-width">
+      <h2 class="title is-3">Trajectory optimization example</h2>
+      <div class="publication-video">
+        <div class="content has-text-centered">
+          <video id="trajectory-optimizatoin" autoplay controls muted preload loop playsinline>
+            <source src="resources/numerical_evaluation.mp4"
+                    type="video/mp4">
+          </video>
+      </div>
+    </div>
+  </div>
+ 
+</div>
+
+  <div class="columns is-centered has-text-centered">
+    <div class="column is-full-width">
       <h2 class="title is-3">Simulation experiments</h2>
       <div class="publication-video">
         <div class="content has-text-centered">
@@ -176,7 +191,21 @@
       </div>
     </div>
   </div>
-  <!--/ Paper video. -->
+
+</div>
+
+  <div class="columns is-centered has-text-centered">
+    <div class="column is-full-width">
+      <h2 class="title is-3">Real robotic experiments</h2>
+      <div class="publication-video">
+        <div class="content has-text-centered">
+          <video id="table-picking" autoplay controls muted preload loop playsinline>
+            <source src="resources/real_robot_experiment.mp4"
+                    type="video/mp4">
+          </video>
+      </div>
+    </div>
+  </div>
 
 </div>
 
