Updated the webpage with videos

--- a/index.html
+++ b/index.html
@@ -178,34 +178,32 @@
   </div>
  
 </div> -->
-
   <div class="columns is-centered has-text-centered">
     <div class="column is-full-width">
       <h2 class="title is-3">Simulation experiments</h2>
-      <div class="publication-video">
-        <div class="content has-text-centered">
-          <video id="table-picking" autoplay controls muted preload loop playsinline>
-            <source src="resources/dexdiff_compress_part2.mp4"
-                    type="video/mp4">
-          </video>
-      </div>
+      <div class="columns is-centered">
+        <!-- First video -->
+        <div class="column is-one-third">
+          <div class="content has-text-centered">
+            <h2 class="title is-3">Square</h2>
+            <video autoplay controls muted preload loop playsinline>
+              <source src="resources/square_sim.mp4" type="video/mp4">
+            </video>
+          </div>
+        </div>
+        <!-- Second video -->
+        <div class="column is-one-third">
+          <div class="content has-text-centered">
+            <h2 class="title is-3">T-shape</h2>
+            <video autoplay controls muted preload loop playsinline>
+              <source src="resources/T-shape-sim.mp4" type="video/mp4">
+            </video>
+          </div>
+        </div>
+     </div>
     </div>
   </div>
 
-</div>
-
-  <div class="columns is-centered has-text-centered">
-    <div class="column is-full-width">
-      <h2 class="title is-3"></h2>
-      <div class="publication-video">
-        <div class="content has-text-centered">
-          <video id="table-picking" autoplay controls muted preload loop playsinline>
-            <source src="resources/real_robot_experiment.mp4"
-                    type="video/mp4">
-          </video>
-      </div>
-    </div>
-  </div>
 
   <div class="columns is-centered has-text-centered">
     <div class="column is-full-width">
@@ -216,7 +214,7 @@
           <div class="content has-text-centered">
             <h2 class="title is-3">Square</h2>
             <video autoplay controls muted preload loop playsinline>
-              <source src="resources/real_robot_experiment.mp4" type="video/mp4">
+              <source src="resources/square_real.mp4" type="video/mp4">
             </video>
           </div>
         </div>
@@ -225,7 +223,7 @@
           <div class="content has-text-centered">
             <h2 class="title is-3">T-shape</h2>
             <video autoplay controls muted preload loop playsinline>
-              <source src="resources/real_robot_experiment.mp4" type="video/mp4">
+              <source src="resources/T-shape-real.mp4" type="video/mp4">
             </video>
           </div>
         </div>
