--- a/index.html
+++ b/index.html
@@ -63,16 +63,16 @@
               Once: Probabilistic Prehensile Pushing</h1>
             <div class="is-size-5 publication-authors">
               <span class="author-block">
-                <a href="">Patrizio Perugini</a>,
+                <a href="https://it.linkedin.com/in/patrizio-perugini-46a03a242?trk=public_profile_browsemap">Patrizio Perugini</a>,
               </span>
               <span class="author-block">
-                <a href="">Jens Lundell</a>,
+                <a href="https://jenslundell.ai/">Jens Lundell</a>,
               </span>
               <span class="author-block">
-                <a href="">Katharina Friedl</a>,
+                <a href="https://www.kth.se/profile/kfriedl">Katharina Friedl</a>,
               </span>
               <span class="author-block">
-                <a href="">Danica Kragic</a>
+                <a href="https://www.kth.se/profile/dani">Danica Kragic</a>
               </span>
             </div>
 
