--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               Once: Probabilistic Prehensile Pushing</h1>
             <div class="is-size-5 publication-authors">
               <span class="author-block">
-                <a href="https://it.linkedin.com/in/patrizio-perugini-46a03a242?trk=public_profile_browsemap">Patrizio Perugini</a>,
+                <a href="https://www.linkedin.com/in/patrizio-perugini-46a03a242?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3Bsngw4fu3QdyrlNh8fot50Q%3D%3D">Patrizio Perugini</a>,
               </span>
               <span class="author-block">
                 <a href="https://jenslundell.ai/">Jens Lundell</a>,
